# q8020-cfd-experiments

./: .gitignore  README.md  pyproject.toml
analysis/burgers-ch-qlbm-June2026/: bakeoff_shock_qubit_dialup.json  ch_smooth_movie_q3.json
analysis/burgers-ch-qlbm-June2026/Z-other/: bakeoff_diffusive_qubit_dialup.json  bakeoff_margin_qubit_dialup.json
analysis/burgers-ch-qlbm-June2026/case1/: case1_bakeoff_mutual_qubit_dialup.json
analysis/burgers-ch-qlbm-June2026/case2/: case2A_shock.json  case2B_margin.json
analysis/burgers-ch-qlbm-June2026/case3/: regime_crossover_nu_q6.json  regime_crossover_nu_q6_runs.json
analysis/burgers-ch-qlbm-June2026/case4/: ch_smooth_movie_q3.json
analysis/burgers-ch-qlbm-June2026/other/: seg_depth_tradeoff_q5_fast.json  seg_depth_tradeoff_q7.json
analysis/fvm_euler_1d/: compare_sets.py  harvest_n5_150k  harvest_n5_150k_LuGo  shot_scaling.py
analysis/fvm_euler_1d/shot_scaling_output/: shot_scaling_data.csv
analysis/qiskit_2.x/: code-HHL-Qiskit_2-and-Qrisp.md  code-Qiskit-Version-Upgrade.md
aux/burgers-ch-lbm-June2026/: burgers_ch_hw_runner.py
aux/frontier_qlsa/: interaction_matrices_cache.pkl
aux/qiskit_2.x/: compare_qiskit_versions.py
backends/: ibm-fez-2026-02-07.json  ibm-torino-2026-02-07.json
cases/fvm_euler_1d_nozzle/: fvm_euler_1d_nozzle.toml
cases/hele-shaw/: hhl_code_comparison.toml
codes/fvm_euler_1d_nozzle/: fvm_euler_1d_solver_harvester.py  harvest_frontier_nelem5.py  harvest_lugo_all.sh
input/burgers_ch_lbm/: AB-BAKEOFF-guide.md
q8020_cfd_experiments/: __init__.py
results/: README.md
(+43054 files in other folders)
