[project]
name = "q8020-cfd-experiments"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pip",
    "q8020_cfd_metautil @ git+https://github.com/Q8020-CFD/q8020-cfd-metautil",
    "q8020_cfd_qutil @ git+https://github.com/Q8020-CFD/q8020-cfd-qutil",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["q8020_cfd_experiments"]

[tool.uv.sources]
q8020_cfd_metautil = { workspace = true }
q8020_cfd_qutil = { workspace = true }

