[project]
name = "q8020-cfd-experiments"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pip",
    "q8020_cfd_metautil @ git+https://github.com/Q8020-CFD/q8020-cfd-metautil",
    "q8020_backend_utils[qiskit] @ git+https://github.com/Q8020-CFD/q8020-backend-utils",
    "matplotlib"
]

[tool.uv]
package = false

[tool.uv.sources]
q8020_cfd_metautil = { workspace = true }
q8020_backend_utils = { workspace = true }
